add swagger data rak
