# docs/swagger.json
@@ -20,7 +20,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Kategori"
+                    "Data Kategori"
                 ],
                 "summary": "Get All Kategori",
                 "responses": {
@@ -47,7 +47,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Kategori"
+                    "Data Kategori"
                 ],
                 "summary": "Insert Kategori",
                 "parameters": [
@@ -83,7 +83,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Kategori"
+                    "Data Kategori"
                 ],
                 "summary": "Get Kategori by ID",
                 "parameters": [
@@ -119,7 +119,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Kategori"
+                    "Data Kategori"
                 ],
                 "summary": "Update Kategori",
                 "parameters": [
@@ -165,7 +165,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Kategori"
+                    "Data Kategori"
                 ],
                 "summary": "Delete Kategori",
                 "parameters": [
@@ -195,7 +195,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Koleksi"
+                    "Data Koleksi"
                 ],
                 "summary": "Get All Koleksi",
                 "responses": {
@@ -222,7 +222,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Koleksi"
+                    "Data Koleksi"
                 ],
                 "summary": "Insert Koleksi",
                 "parameters": [
@@ -382,7 +382,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Koleksi"
+                    "Data Koleksi"
                 ],
                 "summary": "Get Koleksi By ID",
                 "parameters": [
@@ -418,7 +418,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Koleksi"
+                    "Data Koleksi"
                 ],
                 "summary": "Update Koleksi",
                 "parameters": [
@@ -586,7 +586,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Koleksi"
+                    "Data Koleksi"
                 ],
                 "summary": "Delete Koleksi by ID",
                 "parameters": [
@@ -605,7 +605,7 @@
             "get": {
                 "description": "Mengambil seluruh data rak dari database MongoDB.",
                 "consumes": [
-                    "application/json"
+                    "multipart/form-data"
                 ],
                 "produces": [
                     "application/json"
@@ -655,6 +655,114 @@
                         "schema": {
                             "type": "object",
                             "additionalProperties": true
+                        }
+                    }
+                }
+            }
+        },
+        "/rak/{id}": {
+            "get": {
+                "description": "Mengambil data rak berdasarkan ID rak",
+                "consumes": [
+                    "multipart/form-data"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Data Tempat Penyimpanan"
+                ],
+                "summary": "Get Rak by ID",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "ID Rak",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Data rak berhasil ditemukan",
+                        "schema": {
+                            "$ref": "#/definitions/model.Rak"
+                        }
+                    }
+                }
+            },
+            "put": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Memperbarui data rak berdasarkan ID rak",
+                "consumes": [
+                    "multipart/form-data"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Data Tempat Penyimpanan"
+                ],
+                "summary": "Update Rak",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "ID Rak",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Nama Rak",
+                        "name": "nama_rak",
+                        "in": "formData",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Data rak berhasil diperbarui",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "description": "Menghapus data rak berdasarkan ID rak",
+                "consumes": [
+                    "multipart/form-data"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Data Tempat Penyimpanan"
+                ],
+                "summary": "Delete Rak by ID",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "ID Rak",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Data rak berhasil dihapus",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
                         }
                     }
                 }
@@ -1027,6 +1135,17 @@
                 "token": {
                     "type": "string",
                     "example": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9..."
+                }
+            }
+        },
+        "model.Rak": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "string"
+                },
+                "nama_rak": {
+                    "type": "string"
                 }
             }
         },
